# hungry-monkey

./: .env.example  .gitignore  CLAUDE.md  README.md  index.py  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  vercel-build.sh  vercel.json
.vercel/: project.json
api/: index.py  vercel.config.json
app/: main.py  models.py  yasper_feedback.md
app/auth/: clerk.py
app/clients/: google_custom_search.py  google_search.py  supabase.py  supabase_deprecated.py  vapi.py  yelp.py
app/db/: operating_hours.py  restaurants.py  users.py
app/examples/: supabase_test.py  test_api.py  yc_restaurants.py
app/middleware/: auth.py
app/models/: __init__.py  base.py  vapi.py
app/routers/: restaurants.py  test.py  users.py  vapi.py
app/services/: call_dispatch.py  restaurant_service.py
app/utils/: constants.py  decorators.py
backend/: requirements.txt
backend/app/: main.py
frontend/: .env.example  package-lock.json  package.json  vite.config.ts
frontend/src/: App.jsx  App.tsx  main.tsx  types.ts  vite-env.d.ts
frontend/src/components/: Filters.tsx  ProtectedRoute.tsx  RestaurantCard.tsx
frontend/src/data/: mockData.ts
frontend/src/pages/: Profile.tsx
frontend/src/services/: apiClient.ts  restaurantService.ts
scripts/: check_schema.py
