[tool.poetry]
name = "hungry-monkey"
version = "0.1.0"
description = "Hungry Monkey Backend Service"
authors = ["Your Name <your.email@example.com>"]
packages = [{include = "api"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
fastapi = "0.115.5"
httpx = "0.27.2"
mangum = "0.19.0"
pydantic = "2.10.2"
python-dotenv = "1.0.1"
uvicorn = "0.32.1"
supabase = "2.10.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
