[project]
name = "hungry-monkey"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.9.18"
dependencies = [
    "email-validator>=2.3.0",
    "fastapi>=0.128.7",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "supabase>=2.28.0",
    "uvicorn>=0.39.0",
]
